--- a/_config.yml
+++ b/_config.yml
@@ -83,11 +83,11 @@ author:
   name             : "Sara Edinger Murphy"
   avatar           : "profile.png"
   bio              : "Atmospheric Chemist "
-  location         : "Caltech"
+  location         : "UCLA"
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=HObe9BwAAAAJ&hl=en"
-  email            : "semurphy@caltech.edu"
+  email            : "semurphy@ucla.edu"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
@@ -187,6 +187,9 @@ collections:
   talks:
     output: true
     permalink: /:collection/:path/
+  inprep_publications: 
+    output: true
+    permalink: /:collection/:path/
 
 
 # Defaults
@@ -222,6 +225,15 @@ defaults:
   - scope:
       path: ""
       type: publications
+    values:
+      layout: single
+      author_profile: true
+      share: true
+      comments: true
+  # _inprep_publications
+  - scope:
+      path: ""
+      type: inprep_publications
     values:
       layout: single
       author_profile: true
